@@ -6,6 +6,7 @@
             "dbeta", "pbeta")
  importFrom("randtoolbox", "sobol")
 export(copBasic.fitpara.beta)
+export(CLcop)
 export(COP)
 export(COPinv)
 export(COPinv2)
